src/objects/Lithium_URL_Map__c.object
<CustomObject>
    <fields>
        <fullName>Lithium_ID__c</fullName>
        <label>Lithium ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_ID__c</fullName>
        <label>Salesforce ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Discussion</fullName>
                </value>
                <value>
                    <fullName>Board</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Lithium URL Map</label>
    <nameField>
        <displayFormat>L-{00000}</displayFormat>
        <label>Lithium URL Map Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lithium URL Maps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>